# parallel-computing

./: README.md
TextBigrams-Trigrams/: README.txt
TextBigrams-Trigrams /Parallel/: HashMerge.java  Main.java  Parallel_thread.java  Utils.java
TextBigrams-Trigrams /Sequential/: Utils.java
TextBigrams-Trigrams /result10run/: example_bigrams.txt  results_trigrams.xlsx
TextBigrams-Trigrams /sample/: text10KB.txt  text500KB.txt  text50KB.txt
TextBigrams-Trigrams/Sequential/: Main.java  Ngrams.java
TextBigrams-Trigrams/parallel_second_approach/: Main.java  Parallel_thread.java
TextBigrams-Trigrams/parallel_third_approach/: HashMerge.java  Main.java  Parallel_thread.java
TextBigrams-Trigrams/result10run/: Bigrams_speedUp_comparison.xlsx  Trigrams_speedUp_comparison.xlsx  example_trigrams.txt
TextBigrams-Trigrams/result10run/result_first_approach/: results_bigrams.xlsx
TextBigrams-Trigrams/result10run/result_second_approach/: results_bigrams.xlsx  results_trigrams.xlsx
TextBigrams-Trigrams/result10run/result_third_approach/: results_bigrams.xlsx  results_trigrams.xlsx
histogram_equalization/: README.txt
histogram_equalization/Sequential/: CMakeLists.txt  equalization.cpp  histogram.cpp  main.cpp
histogram_equalization/parallelOMP/: CMakeLists.txt  equalization.cpp  histogram.cpp  main.cpp
histogram_equalization/result/: results_forest.xlsx  results_lavaredo.xlsx  results_montebianco.xlsx
histogram_equalization/result/graphics/: results_forest.xlsx  results_lavaredo.xlsx  (+1 more)
histogram_equalization/speedup/: CMakeLists.txt  main.cpp
